# py-ethclient

./: .dockerignore  .gitignore  AGENTS.md  AGENTS_ko.md  CITATION.cff  COMMENT1.md  COMMENT2.md  COMPARISON_WITH_ETHREX.md  CONTRIBUTING.md  Dockerfile  L1_LIMITATIONS.md  L2_PLAN.md  OUTREACH_PR_TRACKER.md  PYTHON_PORTING_PLAN.md  README.md  README_ko.md  SPEC.md  WHITEPAPER.md  WHITEPAPER_ko.md  docker-compose.yml  llms-full.txt  llms.txt  pyproject.toml  run_node.sh  send_transaction.sh  test_full_sync.py  test_mainnet_discovery.py  test_tx_lookup.py  tutorial.md
.github/: FUNDING.yml
analysis/: analysis_en.md  analysis_ko.md  ethrex-risk-mitigation-plan.md  fusaka_compat_plan_ko.md  fusaka_implementation_status.md  plan_fully_independent_en.md  plan_fully_independent_ko.md
contracts/: Counter.sol  SimpleStorage.sol
deployments/: counter.json
docs/: engine-api-block-production.md  lessons.md  sepolia-sync-stabilization.md  todo.md
ethclient/: main.py
ethclient/blockchain/: chain.py  fork_choice.py  mempool.py
ethclient/bridge/: __init__.py  environment.py  messenger.py  relay_handlers.py  types.py  watcher.py
ethclient/common/: config.py  crypto.py  hash.py  rlp.py  trie.py  types.py
ethclient/l2/: __init__.py  cli.py  config.py  da.py  da_blob.py  da_calldata.py  da_s3.py  eth_l1_backend.py  eth_rpc.py  health.py  interfaces.py  l1_backend.py  metrics.py  middleware.py  native_prover.py  persistent_state.py  prover.py  rollup.py  rpc_api.py  runtime.py  sequencer.py  state.py  submitter.py  types.py
ethclient/networking/: protocol_registry.py  server.py
ethclient/rpc/: engine_api.py  engine_types.py  eth_api.py  server.py  zk_api.py
ethclient/storage/: disk_backend.py  memory_backend.py  store.py
ethclient/vm/: call_frame.py  evm.py  gas.py  hooks.py  memory.py  opcodes.py  (+1 more)
examples/: l2_rps_game.py  l2_sepolia_all.py  l2_sepolia_hello.py  zk_note_settle.py  zk_notebook_demo.py
monitoring/: ethrex-dashboard.json
scripts/: deploy_contract.py  interact_contract.py  migrate-chaindata.sh  post-deployment-validation.sh  pre-deployment-fusaka-check.sh  pre-deployment-validation.sh
tests/: conftest.py  test_block_compatibility.py  test_block_gas_limit.py  test_block_producer_recovery.py  test_block_time.py  test_blockchain.py  test_bridge_censorship.py  test_bridge_e2e.py  test_bridge_messenger.py  test_bridge_proof_relay.py  test_contract_storage.py  test_create2.py  test_crypto.py  test_crypto_compatibility.py  test_disk_backend.py  test_eip1559.py  test_eip2930.py  test_eip7702.py  test_estimate_gas.py  test_evm.py  test_fee_history.py  test_get_logs.py  test_get_transaction.py  test_integration.py  test_l2_da.py  test_l2_da_providers.py  test_l2_eth_l1_backend.py  test_l2_framework_hardening.py  test_l2_health.py  test_l2_integration.py  test_l2_l1.py  test_l2_middleware.py  test_l2_native_prover.py  test_l2_persistent_state.py  test_l2_prover.py  test_l2_rpc.py  test_l2_runtime.py  test_l2_sequencer.py  test_l2_sequencer_hardening.py  test_l2_state.py  (+24 more)
tests_skill/: test_skill_files.py  test_skill_invoke.py
(+85 files in other folders)
