[project]
name = "sequencer"
version = "0.1.0"
description = "Ultra-lightweight Ethereum single sequencer L1"
dependencies = [
    "py-evm>=0.12.0b1",
    "ethereum-rlp>=0.1.4",
    "rlp>=4.0.0",
    "pycryptodome>=3.20.0",
    "eth-keys>=0.7.0",
    "trie>=3.1.0",
    "ethereum-types>=0.1.0",
    "eth-utils>=5.0.0",
    "hexbytes>=1.3.0",
]

[project.scripts]
sequencer = "sequencer.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "mypy>=1.8.0",
    "ruff>=0.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sequencer"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true