[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "py-ethclient"
version = "0.1.0"
description = "Python L2 development platform for application-specific ZK rollups — STF, Groth16, L1↔L2 bridge, and full Ethereum execution client"
authors = [{name = "Tokamak Network"}]
license = {text = "MIT"}
requires-python = ">=3.12"
keywords = ["ethereum", "l2", "rollup", "zk-rollup", "groth16", "zk-proof", "evm", "bridge", "python", "blockchain"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Security :: Cryptography",
]
dependencies = [
    "pycryptodome>=3.20",
    "coincurve>=20.0",
    "eth-hash[pycryptodome]>=0.7",
    "fastapi>=0.115",
    "uvicorn>=0.32",
    "python-snappy>=0.7",
    "py-ecc>=7.0",
    "ckzg>=2.0",
    "lmdb>=1.4",
]

[project.optional-dependencies]
s3 = ["boto3>=1.34"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
]

[tool.setuptools.packages.find]
include = ["ethclient*"]

[project.urls]
Homepage = "https://github.com/tokamak-network/py-ethclient"
Repository = "https://github.com/tokamak-network/py-ethclient"
Documentation = "https://github.com/tokamak-network/py-ethclient/blob/main/README.md"
Issues = "https://github.com/tokamak-network/py-ethclient/issues"

[project.scripts]
ethclient = "ethclient.main:main"
